Profile Pictures added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           Name: "Shirin Jamalli",
           Position: "Chairman of the Board",
           email: "",
-          img: "",
+          img: "./blank-profile-picture-973460_1280.webp",
         },
         {
           id: "2",
@@ -24,7 +24,7 @@
           Name: "Elvin Jamalli",
           Position: "Deputy Chairman Commerce Europe",
           email: "",
-          img: "",
+          img: "./blank-profile-picture-973460_1280.webp",
         },
         {
           id: "3",
@@ -32,7 +32,7 @@
           Name: "Michael Gilhooley",
           Position: "Commercial Manager",
           email: "",
-          img: "",
+          img: "./blank-profile-picture-973460_1280.webp",
         },
         {
           id: "5",
@@ -40,7 +40,7 @@
           Name: "Michael Richards",
           Position: "Senior Sales Specialist",
           email: "",
-          img: "",
+          img: "./blank-profile-picture-973460_1280.webp",
         },
         {
           id: "6",
@@ -48,7 +48,7 @@
           Name: "Nick Williamson",
           Position: "Senior Sales Specialist",
           email: "",
-          img: "",
+          img: "./blank-profile-picture-973460_1280.webp",
         },
         {
           id: "7",
@@ -56,7 +56,7 @@
           Name: "Andrew Roberts",
           Position: "Senior Sales Specialist",
           email: "",
-          img: "",
+          img: "./blank-profile-picture-973460_1280.webp",
         },
         {
           id: "8",
@@ -64,7 +64,7 @@
           Name: "Vacant",
           Position: "Operations Manager",
           email: "",
-          img: "",
+          img: "./blank-profile-picture-973460_1280.webp",
         },
         {
           id: "9",
@@ -72,7 +72,7 @@
           Name: "Richard Millard",
           Position: "Senior Logistics Specialist",
           email: "",
-          img: "",
+          img: "./blank-profile-picture-973460_1280.webp",
         },
         {
           id: "10",
@@ -80,7 +80,7 @@
           Name: "Vacant",
           Position: "Operations Specialist",
           email: "",
-          img: "",
+          img: "./blank-profile-picture-973460_1280.webp",
         },
 
         {
@@ -89,7 +89,7 @@
           Name: "Vacant",
           Position: "Financial Controller",
           email: "",
-          img: "",
+          img: "./blank-profile-picture-973460_1280.webp",
         },
         {
           id: "12",
@@ -97,7 +97,7 @@
           Name: "Joseph Babuji",
           Position: "Chief Accountant",
           email: "",
-          img: "",
+          img: "./blank-profile-picture-973460_1280.webp",
         },
         {
           id: "4",
@@ -105,7 +105,7 @@
           Name: "Nitika Nanda",
           Position: "Senior Commercial Specialist",
           email: "",
-          img: "",
+          img: "./blank-profile-picture-973460_1280.webp",
         },
         {
           id: "13",
@@ -113,7 +113,7 @@
           Name: "Vacant",
           Position: "ERP Specialist",
           email: "",
-          img: "",
+          img: "./blank-profile-picture-973460_1280.webp",
         },
       ];
 
